[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/creature_info_panel.gd" id="1_panel"]

[node name="CreatureInfoPanel" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 210.0
grow_horizontal = 0
script = ExtResource("1_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Imp (Player)"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthIcon" type="Label" parent="MarginContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
text = "HP:"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
text = "100/100"

[node name="HappinessContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HappyIcon" type="Label" parent="MarginContainer/VBoxContainer/HappinessContainer"]
layout_mode = 2
text = "Joy:"

[node name="HappinessBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HappinessContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HappinessLabel" type="Label" parent="MarginContainer/VBoxContainer/HappinessContainer"]
layout_mode = 2
text = "100%"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "State: Idle"

[node name="TaskLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Task: None"
